# youtube-playlist-shuffler

./: README.md  pyproject.toml
.github/workflows/: tests.yml
shuffle/: __main__.py  auth.py  config.py  playlist.py  playlists.json
tests/: test-shuffle.py
