[project]
name = "YouTube Playlist Shuffler"
version = "1.0.0"
description = "Automatically shuffle YouTube playlists through the Google YouTube Data API"
readme = "README.md"
authors = [{name = "Sup#2.0"}]
license = {file = "LICENSE"}
requires-python = ">= 3.12"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/Sup2point0/youtube-playlist-shuffler"
Repository = "https://github.com/Sup2point0/youtube-playlist-shuffler"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]
python_files = [
  "test-*.py",
]
